--- a/hurumap_ng/templates/about.html
+++ b/hurumap_ng/templates/about.html
@@ -7,10 +7,7 @@
         <h1>About {{ HURUMAP.name }}</h1>
         <p><em>What’s the data behind the story?</em></p>
 
-        <p>{{ HURUMAP.name }} gives infomediaries like journalists and civic activists an easy ‘plug & play’ toolkit for finding and embedding interactive data visualisations into their storytelling. The project's underlying data is by the National Bureau of Statistics.</p>
-
-        <p>The project is built on <a href="http://wazimap.readthedocs.org/" target="_blank" rel="noopener">Wazimap</a>, an open source platform by <a href="https://openup.org.za/" target="_blank" rel="noopener">OpenUp</a> and <a href="http://www.mediamonitoringafrica.org/" target="_blank" rel="noopener">Media Monitoring Africa</a> for making census data more understandable.</p>
-
+        <p>{{ HURUMAP.name }} gives infomediaries like journalists and civic activists an easy ‘plug & play’ toolkit for finding and embedding interactive data visualisations into their storytelling. The data is by the National Bureau of Statistics.</p>
         <br/>
     </div>
 {% endblock %}
