--- a/hurumap_ng/templates/_footer.html
+++ b/hurumap_ng/templates/_footer.html
@@ -2,7 +2,7 @@
 
 <div class="column-half">
     <p class="smaller"><strong>{{ HURUMAP.name }}</strong> {{ HURUMAP.description }}</p>
-    <p class="smaller">This site is an <strong><a href="https://openafrica.net" target="_blank" rel="noopener">openAFRICA</a></strong> project of <strong><a href="https://codeforafrica.org" target="_blank">Code for Africa</a></strong>. The project is built on Wazimap, an open source platform by OpenUp and Media Monitoring Africa for making census data more understandable.</p>
+    <p class="smaller">This site is an <strong><a href="//openafrica.net" target="_blank" rel="noopener">openAFRICA</a></strong> project of <strong><a href="https://codeforafrica.org" target="_blank">Code for Africa</a></strong>. The project is built on Wazimap, an open source platform by OpenUp and Media Monitoring Africa for making census data more understandable.</p>
     <br/>
 </div>
 
@@ -12,7 +12,9 @@
 <div class="column-quarter text-center">
     <p>A project by:</p>
     {% block footer_branding %}
-    <a href="https://facebook.com/CodeForAfrica/" target="_blank" rel="noopener">
+    <a href="//facebook.com/CodeForAfrica/" target="_blank" rel="noopener">
         <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
+    <a href="//www.nigerianstat.gov.ng/" target="_blank" rel="noopener">
+        <img src="{% static 'img/logos/nbs.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
     {% endblock %}
 </div>
