--- a/hurumap_ng/templates/insights.html
+++ b/hurumap_ng/templates/insights.html
@@ -17,7 +17,7 @@
                     <div class="flourish-embed" data-src="story/36013"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
                 </div>
                 <div class="row insight">
-                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQMzdf69dDlDTJQslBPNj9ewroEzdnYyg61cRb8geqZZBn3byPpYsveZEtIhLSA_GYvytSLchg84p_t/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="629" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                    <div class="flourish-embed" data-src="story/36112"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
                 </div>
             </section>
         </article>
