--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -20,14 +20,14 @@
 {% block profile_detail %}
 
 
-{% if not nbs_2016.is_missing or not nbs_2018.is_missing %}
+{% if not crime.is_missing %}
   <article id="debt" class="clearfix">
-    <header class="section-contents"><h1>National Bureau of Statistics</h1></header>
+    <header class="section-contents"><h1>Corruption & Crime</h1></header>
     <div class="section-container">
-      {% if not nbs_2016.arrested_suspects.is_missing %}
+      {% if not crime.arrested_suspects.is_missing %}
       <section class="clearfix stat-row">
         <div class="column-full">
-            <div id="chart-column-nbs_2016-arrested_suspects"
+            <div id="chart-column-crime-arrested_suspects"
                  data-chart-title="Number of Suspects Arrested on Drug Charges 2012-2016"
                  data-stat-type="number"
                  data-source-title="National Bureau of Statistics, 2016"
@@ -35,21 +35,10 @@
           </div>
       </section>
       {% endif %}
-      {% if not nbs_2016.drugs_seized.is_missing %}
+      {% if not crime.suspects_prosecuted.is_missing %}
       <section class="clearfix stat-row">
         <div class="column-full">
-            <div id="chart-column-nbs_2016-drugs_seized"
-                 data-chart-title="Quantity of Narcotic Drugs Seized (kg) 2012-2016"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2016"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2016.suspects_prosecuted.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2016-suspects_prosecuted"
+            <div id="chart-column-crime-suspects_prosecuted"
                  data-chart-title="Number of Suspects Prosecuted on Drug Charges 2012-2016"
                  data-stat-type="number"
                  data-source-title="National Bureau of Statistics, 2016"
@@ -57,22 +46,11 @@
           </div>
       </section>
       {% endif %}
-      {% if not nbs_2016.conviction_secured.is_missing %}
+      {% if not crime.conviction_secured.is_missing %}
       <section class="clearfix stat-row">
         <div class="column-full">
-            <div id="chart-column-nbs_2016-conviction_secured"
+            <div id="chart-column-crime-conviction_secured"
                  data-chart-title="Number of Convictions Secured on Drug Cases 2012 - 2016"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2016"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2016.counselling_concluded.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2016-counselling_concluded"
-                 data-chart-title="Number of Drug Counselling Sessions Concluded 2012 - 2016"
                  data-stat-type="number"
                  data-source-title="National Bureau of Statistics, 2016"
                  data-source-link="https://nigerianstat.gov.ng/download/614"></div>
@@ -108,8 +86,8 @@
                data-chart-title="External and Domestic Debt 2011 - June 2018 in ₦" data-stat-type="number"></div>
             </div>
         </section>
-        {% endif %}
-        {% if not nbs_2018.faac.is_missing %}
+      {% endif %}
+      {% if not nbs_2018.faac.is_missing %}
       <section class="clearfix stat-row">
         <div class="column-full">
             <div id="chart-column-nbs_2018-faac"
@@ -142,117 +120,164 @@
           </div>
       </section>
       {% endif %}
-      {% if not nbs_2018.hiv_patients.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-grouped_column-nbs_2018-hiv_patients"
-                 data-chart-title="Distribution of HIV Patients by Year and Sex 2015-2016"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2018"
-                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.petrol_price.2019.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-petrol_price-2019"
-                 data-chart-title="Petrol Price Jan to Dec 2019"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.diesel_price.2019.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-diesel_price-2019"
-                 data-chart-title="Desel Price Jan to Dec 2019"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.petrol_price.2018.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-petrol_price-2018"
-                 data-chart-title="Petrol Price Jan to Dec 2018"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.diesel_price.2018.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-diesel_price-2018"
-                 data-chart-title="Desel Price Jan to Dec 2018"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.petrol_price.2017.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-petrol_price-2017"
-                 data-chart-title="Petrol Price Jan to Dec 2017"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.diesel_price.2017.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-diesel_price-2017"
-                 data-chart-title="Desel Price Jan to Dec 2017"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.petrol_price.2016.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-petrol_price-2016"
-                 data-chart-title="Petrol Price Jan to Dec 2016"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.diesel_price.2016.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-diesel_price-2016"
-                 data-chart-title="Desel Price Jan to Dec 2016"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-          </div>
-      </section>
-      {% endif %}
-      {% if not nbs_2018.diesel_price.2015.is_missing %}
-      <section class="clearfix stat-row">
-        <div class="column-full">
-            <div id="chart-column-nbs_2018-diesel_price-2015"
-                 data-chart-title="Desel Price Jan to Dec 2015"
-                 data-stat-type="number"
-                 data-source-title="National Bureau of Statistics, 2019"
-                 data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-          </div>
-      </section>
-      {% endif %}
     </div>
   </article>
+  {% endif %}
+
+  {% if not health.is_missing %}
+    <article id="health" class="clearfix">
+      <header class="section-contents"><h1>Health</h1></header>
+      <div class="section-container">
+        {% if not health.hiv_patients.is_missing %}
+          <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-health-hiv_patients"
+                   data-chart-title="Distribution of HIV Patients by Year and Sex 2015-2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not health.counselling_concluded.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-health-counselling_concluded"
+                   data-chart-title="Number of Drug Counselling Sessions Concluded 2012 - 2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2016"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+      </div>
+    </article>
+  {% endif %}
+
+
+  {% if not drugs.is_missing %}
+    <article id="drugs" class="clearfix">
+      <header class="section-contents"><h1>Corruption & Crime</h1></header>
+      <div class="section-container">
+        {% if not drugs.drugs_seized.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-drugs-drugs_seized"
+                   data-chart-title="Quantity of Narcotic Drugs Seized (kg) 2012-2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2016"
+                   data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+            </div>
+        </section>
+        {% endif %}
+      </div>
+    </article>
+  {% endif %}
+
+  {% if not transportation.is_missing %}
+    <article id="transportation" class="clearfix">
+      <header class="section-contents"><h1>transportation</h1></header>
+      <div class="section-container">
+        {% if not transportation.petrol_price.2019.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-petrol_price-2019"
+                   data-chart-title="Petrol Price Jan to Dec 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.diesel_price.2019.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-diesel_price-2019"
+                   data-chart-title="Desel Price Jan to Dec 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.petrol_price.2018.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-petrol_price-2018"
+                   data-chart-title="Petrol Price Jan to Dec 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.diesel_price.2018.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-diesel_price-2018"
+                   data-chart-title="Desel Price Jan to Dec 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.petrol_price.2017.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-petrol_price-2017"
+                   data-chart-title="Petrol Price Jan to Dec 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.diesel_price.2017.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-diesel_price-2017"
+                   data-chart-title="Desel Price Jan to Dec 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.petrol_price.2016.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-petrol_price-2016"
+                   data-chart-title="Petrol Price Jan to Dec 2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.diesel_price.2016.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-diesel_price-2016"
+                   data-chart-title="Desel Price Jan to Dec 2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.diesel_price.2015.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-diesel_price-2015"
+                   data-chart-title="Desel Price Jan to Dec 2015"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+      </div>
+    </article>
   {% endif %}
 {% endblock %}
