--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -72,6 +72,17 @@
             </div>
         </section>
         {% endif %}
+        {% if not health.contraceptive_use.is_missing %}
+          <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-health-contraceptive_use"
+                   data-chart-title="Percent of women currently married or in union who are using (or whose partner is using) Contraceptive 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2017"
+                   data-source-link="https://nigerianstat.gov.ng/resource/Demographic%20Statistics%20Bulletin%202017%20tables.xlsx"></div>
+            </div>
+        </section>
+        {% endif %}
         {% if not health.counselling_concluded.is_missing %}
         <section class="clearfix stat-row">
           <div class="column-full">
@@ -105,6 +116,47 @@
             </div>
         </section>
         {% endif %}
+      </div>
+    </article>
+  {% endif %}
+
+  {% if not education.is_missing %}
+    <article id="education" class="clearfix">
+      <header class="section-contents"><h1>Education</h1></header>
+      <div class="section-container">
+        {% if not education.junior_secondary_school_enrollment.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-education-junior_secondary_school_enrollment"
+                data-stat-type="number"
+                data-chart-title="Distribution of Enrolment in Junior Secondary School by Year and sex, 2015 -2016"
+                data-source-title="National Bureau of Statistics, 2018"
+                data-source-link="https://nigerianstat.gov.ng/download/952"></div>
+          </div>
+        </section>
+        {% endif %}
+        {% if not education.senior_secondary_school_enrollment.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+               <div id="chart-grouped_column-education-senior_secondary_school_enrollment"
+               data-stat-type="number"
+               data-chart-title="Distribution of Enrolment in Senior Secondary School by State, Year and Sex, 2015 -2016"
+               data-source-title="National Bureau of Statistics, 2018"
+               data-source-link="https://nigerianstat.gov.ng/download/952"></div>
+          </div>
+        </section>
+        {% endif %}
+        {% if not education.technical_school.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-education-technical_school"
+                   data-chart-title="Number Of Technical Schools By State And Year, (2014-2016)"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2017"
+                   data-source-link="https://nigerianstat.gov.ng/download/866"></div>
+            </div>
+          </section>
+          {% endif %}
       </div>
     </article>
   {% endif %}
@@ -310,6 +362,17 @@
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2018"
                    data-source-link="https://nigerianstat.gov.ng/resource/JAN-DEC%202018%20Harmonised%20Air%20Traffic%20Statistics.xlsx"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not transportation.diesel_year.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-transportation-diesel_year"
+                   data-chart-title="Yearly Average Diesel Price per litre (₦)"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/resource/DIESEL%20may%202019.xlsx"></div>
             </div>
         </section>
         {% endif %}
