--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -9,6 +9,12 @@
               src="{% static 'img/icons/favicon.ico' %}">{{ geography.this.name }}
           </span>
         </div>
+        <ul>
+          {% for tab in tabs %}
+            <li><a href={{tab.href}}><span>{{tab.name}}</span></a>
+            </li>
+          {% endfor %}
+          </ul>
       </div>
     </nav>
   </div>
@@ -525,158 +531,6 @@
       </div>
     </article>
   {% endif %}
-
-  {% if not transportation.is_missing %}
-    <article id="transportation" class="clearfix">
-      <header class="section-contents"><h1>Transportation</h1></header>
-      <div class="section-container">
-        {% if not transportation.driver_licences_processed.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-driver_licences_processed"
-                   data-chart-title="Drivers Licences Processed (2013 - 2015)"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2016"
-                   data-source-link="https://nigerianstat.gov.ng/download/359"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.air_transportation_domestic.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-grouped_column-transportation-air_transportation_domestic"
-                   data-chart-title="Number of Passengers 2018, Domestics Flights"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2018"
-                   data-source-link="https://nigerianstat.gov.ng/resource/JAN-DEC%202018%20Harmonised%20Air%20Traffic%20Statistics.xlsx"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.air_transportation_international.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-grouped_column-transportation-air_transportation_international"
-                   data-chart-title="Number of Passengers 2018, International Flights"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2018"
-                   data-source-link="https://nigerianstat.gov.ng/resource/JAN-DEC%202018%20Harmonised%20Air%20Traffic%20Statistics.xlsx"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.diesel_year.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-diesel_year"
-                   data-chart-title="Yearly Average Diesel Price per litre (₦)"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/resource/DIESEL%20may%202019.xlsx"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.petrol_price.2019.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-petrol_price-2019"
-                   data-chart-title="Petrol Price Jan to Dec 2019"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.diesel_price.2019.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-diesel_price-2019"
-                   data-chart-title="Desel Price Jan to Dec 2019"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.petrol_price.2018.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-petrol_price-2018"
-                   data-chart-title="Petrol Price Jan to Dec 2018"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.diesel_price.2018.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-diesel_price-2018"
-                   data-chart-title="Desel Price Jan to Dec 2018"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.petrol_price.2017.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-petrol_price-2017"
-                   data-chart-title="Petrol Price Jan to Dec 2017"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.diesel_price.2017.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-diesel_price-2017"
-                   data-chart-title="Desel Price Jan to Dec 2017"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.petrol_price.2016.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-petrol_price-2016"
-                   data-chart-title="Petrol Price Jan to Dec 2016"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.diesel_price.2016.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-diesel_price-2016"
-                   data-chart-title="Desel Price Jan to Dec 2016"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-            </div>
-        </section>
-        {% endif %}
-        {% if not transportation.diesel_price.2015.is_missing %}
-        <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-transportation-diesel_price-2015"
-                   data-chart-title="Desel Price Jan to Dec 2015"
-                   data-stat-type="number"
-                   data-source-title="National Bureau of Statistics, 2019"
-                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
-            </div>
-        </section>
-        {% endif %}
-      </div>
-    </article>
-  {% endif %}
-
   {% if not finance.is_missing %}
     <article id="transportation" class="clearfix">
       <header class="section-contents"><h1>Finances</h1></header>
@@ -701,6 +555,156 @@
                        data-source-link="https://nigerianstat.gov.ng/download/384"></div>
                 </div>
               {% endif %}
+        </section>
+        {% endif %}
+      </div>
+    </article>
+  {% endif %}
+  {% if not others.is_missing %}
+    <article id="transportation" class="clearfix">
+      <header class="section-contents"><h1>Others</h1></header>
+      <div class="section-container">
+        {% if not false %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-driver_licences_processed"
+                   data-chart-title="Drivers Licences Processed (2013 - 2015)"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2016"
+                   data-source-link="https://nigerianstat.gov.ng/download/359"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.air_transportation_domestic.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-air_transportation_domestic"
+                   data-chart-title="Number of Passengers 2018, Domestics Flights"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/resource/JAN-DEC%202018%20Harmonised%20Air%20Traffic%20Statistics.xlsx"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.air_transportation_international.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-grouped_column-others-air_transportation_international"
+                   data-chart-title="Number of Passengers 2018, International Flights"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2018"
+                   data-source-link="https://nigerianstat.gov.ng/resource/JAN-DEC%202018%20Harmonised%20Air%20Traffic%20Statistics.xlsx"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.diesel_year.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-diesel_year"
+                   data-chart-title="Yearly Average Diesel Price per litre (₦)"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/resource/DIESEL%20may%202019.xlsx"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.petrol_price.2019.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-petrol_price-2019"
+                   data-chart-title="Petrol Price Jan to Dec 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.diesel_price.2019.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-diesel_price-2019"
+                   data-chart-title="Desel Price Jan to Dec 2019"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.petrol_price.2018.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-petrol_price-2018"
+                   data-chart-title="Petrol Price Jan to Dec 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.diesel_price.2018.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-diesel_price-2018"
+                   data-chart-title="Desel Price Jan to Dec 2018"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.petrol_price.2017.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-petrol_price-2017"
+                   data-chart-title="Petrol Price Jan to Dec 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.diesel_price.2017.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-diesel_price-2017"
+                   data-chart-title="Desel Price Jan to Dec 2017"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.petrol_price.2016.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-petrol_price-2016"
+                   data-chart-title="Petrol Price Jan to Dec 2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/923"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.diesel_price.2016.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-diesel_price-2016"
+                   data-chart-title="Desel Price Jan to Dec 2016"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
+        </section>
+        {% endif %}
+        {% if not others.diesel_price.2015.is_missing %}
+        <section class="clearfix stat-row">
+          <div class="column-full">
+              <div id="chart-column-others-diesel_price-2015"
+                   data-chart-title="Desel Price Jan to Dec 2015"
+                   data-stat-type="number"
+                   data-source-title="National Bureau of Statistics, 2019"
+                   data-source-link="https://nigerianstat.gov.ng/download/921"></div>
+            </div>
         </section>
         {% endif %}
       </div>
